--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             http://maven.apache.org/xsd/maven-4.0.xsd"> 
-    <modelVersion>4.0</modelVersion> 
-    <groupId>com.library..</groupId> 
-    <artifactId>Book Metro Ticket</artifactId> 
-    <version>1.0SNAPSHOT</version> 
-    <packaging>warfile</packaging> 
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+                             http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.example</groupId>
+    <artifactId>myapp</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <dependencies>
         <!-- Servlet API -->
         <dependency>
-            <groupId></groupId>
+            <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.one</version> 
-            <scope>providd</scope> 
+            <version>4.0.1</version> 
+            <scope>provided</scope> 
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version> 
+            <scope>provided</scope> 
         </dependency>
 
                
