--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>war</packaging>
 
     <dependencies>
-        <!-- Servlet API -->
+        <!-- Servlet APIV -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
